--- a/resume.html
+++ b/resume.html
@@ -44,10 +44,16 @@
         <table>
           <tbody class="col-2">
             <tr>
-              <td class="date"><small>May 2022 - Present</small></td>
+              <td class="date"><small>Sep 2023 - Present</small></td>
               <td class="title"><h4>Back End Developer</h4></td>
+              <td class="location"><h3>Tedsys, Malmo</h3></td>
+              <td class="description"><p>To be defined ...</p></td>
+            </tr>
+            <tr>
+              <td class="date"><small>May 2022 - Sep 2023</small></td>
+              <td class="title"><h4>Back End Developer / Tech Lead</h4></td>
               <td class="location"><h3>Doktor.se, Malmo</h3></td>
-              <td class="description"><p></p></td>
+              <td class="description"><p>Implementation of the server-side logic for an advanced graph editor, with features to create, edit, and publish complex interconnected graphs with personalized assistance.</p></td>
             </tr>
             <tr>
               <td class="date"><small>Oct 2020 - Apr 2022</small></td>
@@ -88,12 +94,6 @@
               <td class="title"><h4>Software Developer</h4></td>
               <td class="location"><h3>CupManager, Lund</h3></td>
               <td class="description"><p>Development for preparing internationalization of a IT-system, that handles organization of tournaments, ex matchmaking.</p></td>
-            </tr>
-            <tr>
-              <td class="date"><small>Jun 2013 - Sep 2014</small></td>
-              <td class="title"><h4>Retail Sales</h4></td>
-              <td class="location"><h3>Harald Nyborg, Löddeköpinge</h3></td>
-              <td class="description"><p>Duties and experience in retail sales, cash service, inventory and warehouse work.</p></td>
             </tr>
           </tbody>
         </table>
