--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
               <td class="location"><h3>Doktor.se, Malmo</h3></td>
               <td class="description"><p>Implementation of the server-side logic for an advanced graph editor, with features to create, edit, and publish complex interconnected graphs with personalized assistance.</p></td>
             </tr>
-            <tr>
+            <tr class="clear">
               <td class="date"><small>Oct 2020 - Apr 2022</small></td>
               <td class="title"><h4>Software Developer / Project Manager</h4></td>
               <td class="location"><h3>Jayway, Malmo</h3></td>
@@ -67,7 +67,7 @@
               <td class="location"><h3>Netcompany, Copenhagen</h3></td>
               <td class="description"><p>Development of a full stack java application and an Umbraco + Vue system.</p></td>
             </tr>
-            <tr>
+            <tr class="clear">
               <td class="date"><small>Aug 2017 - Dec 2018</small></td>
               <td class="title"><h4>Tutor</h4></td>
               <td class="location"><h3>Lund University, Lund</h3></td>
@@ -81,7 +81,7 @@
                 <p>Development of a full stack application, NodeJS (React & Express) and MySQL, with advanced management of risks and users for the multiple applications.</p>
               </td>
             </tr>
-            <tr>
+            <tr class="clear">
               <td class="date"><small>Jun 2015 - Aug 2017</small></td>
               <td class="title"><h4>IT Consultant</h4></td>
               <td class="location"><h3>Lunicore, Lund</h3></td>
