--- a/resume.html
+++ b/resume.html
@@ -149,6 +149,11 @@
         <h1>Frameworks</h1>
         <ul class="skill">
           <li>
+            <span>Node.js</span>
+            <span>100%</span>
+            <span class="w100"></span>
+          </li>
+          <li>
             <span>React.js</span>
             <span>100%</span>
             <span class="w100"></span>
@@ -167,13 +172,12 @@
 
         <h1>Download Résumé</h1>
         <ul class="boxes">
-          <li><a href="//www.codies.se/cv/en.pdf">English CV</a></li>
-          <li><a href="//www.codies.se/cv/sv.pdf">Swedish CV</a></li>
+          <li><a href="//www.codies.se/cv.pdf">Download CV</a></li>
         </ul>
       </main>
 
       <footer>
-        <span>© Copyright <span id="year">2020</span> | Victor Winberg</span>
+        <span>© Copyright <span id="year">2023</span> | Victor Winberg</span>
       </footer>
     </div>
   </body>
