--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
             </tr>
             <trv>
               <td class="project"><h4>ereuntzdag</h4></td>
-              <td class="location"><h3><a href="//catarinasorensen.github.io/ereuntzdag.se/">ereuntzdag.se</a></h3></td>
+              <td class="location"><h3><a href="../ereuntzdag.se">ereuntzdag.se</a></h3></td>
               <td class="description"><p>Countdown and check for next Untzdag</p></td>
             </tr>
             <tr>
