--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
 
       <main>
         <h1>About</h1>
-        <p>Hi, my name is Victor Winberg born and raised in a small town called Hofterup. Lived in Lund since I started at the Faculty of Engineering.</p>
+        <p>Hi, my name is Victor Winberg born and raised in a small town called Hofterup. Lived in Lund when started at the Faculty of Engineering and then moved to Malmö.</p>
         <p>
           I discovered early on a keen interest in computers and technology, resulting in a natural choice to study the Technology Programme during high school. With passion for programming, problem
-          solving and challenges, I started studying Master of Science in Computer Engineering at the University of Lund.
+          solving and challenges, I started studying Master of Science in Computer Engineering at the University of Lund. Now I work in Malmö solving problems with programming for a living.
         </p>
         <p>
           With over 3000 commits on Github, I have had many school, hobby and fun projects over the years that I have learned everything from programming languages such as; Python, Javascript, Elixir
@@ -70,7 +70,7 @@
       </main>
 
       <footer>
-        <span>© Copyright <span id="year">2020</span> | Victor Winberg</span>
+        <span>© Copyright <span id="year">2023</span> | Victor Winberg</span>
       </footer>
     </div>
   </body>
